--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -33,10 +33,11 @@
             <span></span>
             <span></span>
             <ul id="menu">
-              <a href="/"><li><i class="fa fa-home" aria-hidden="true" style="font-size:24px;"></i>&nbsp;&nbsp; Home</li></a>
-              <a href="#"><li><i class="fa fa-id-card" aria-hidden="true" style="font-size:24px;"></i>&nbsp; Contact</li></a>
-              <a href="/register"><li><i class="fa fa-user-plus" aria-hidden="true" style="font-size:24px;"></i>&nbsp; Register</li></a>
-              <a href="/login"><li><i class="fa fa-sign-in" aria-hidden="true" style="font-size:24px;"></i>&nbsp;&nbsp; Log In</li></a>
+              <a href="/"><li><i class="fa fa-home" aria-hidden="true" style="font-size:30px;"></i>&nbsp;&nbsp;&nbsp; Home</li></a>
+              <a href="#contact"><li><i class="fa fa-id-card" aria-hidden="true" style="font-size:30px;"></i>&nbsp;&nbsp; Contact</li></a>
+              <a href="/generate"><li><i class="fa fa-music" aria-hidden="true" style="font-size:30px;"></i>&nbsp;&nbsp;&nbsp; Create Songs</li></a>
+              <a href="https://www.youtube.com/channel/UCOsZtY6Wl13tZB_Zie_W0Fg/featured" target="_blank"><li><i class="fa fa-youtube-play" aria-hidden="true" style="font-size:30px;"></i>&nbsp;&nbsp; Watch Live Stream</li></a>
+              <a href="https://soundcloud.com/alpha-music-416482025" target="_blank"><li><i class="fa fa-soundcloud" aria-hidden="true" style="font-size:30px;"></i>&nbsp; Listen To Sound Cloud</li></a>
             </ul>
           </div>
         </nav>
@@ -48,10 +49,10 @@
               </a>
 			  <div class="header-right">
 				<a class="active" href="#home">Home</a>
-				<a href="#second">Contact</a>
-				<a href="#footer">About</a>
-                <a href="/login">Log In</a>
-                <a href="/register">Register</a>
+				<a href="#contact">Contact</a>
+				<a href="/generate">Generate Songs</a>
+                <a href="https://www.youtube.com/channel/UCOsZtY6Wl13tZB_Zie_W0Fg/featured" target="_blank">Live Stream</a>
+                <a href="https://soundcloud.com/alpha-music-416482025" target="_blank">Sound Cloud</a>
 			  </div>
 		  </div>
 		  <div class="caption">
@@ -86,7 +87,12 @@
                 </h1>
                 
                 <h1 class="display-4 text-box">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    If you are in need of royalty free music we got you covered. <br>
+                    Complete the following steps in order to get your music in under two minutes! <br>
+                    - Choose the number of songs to generate. <br>
+                    - Choose the length of the songs. <br>
+                    - Choose the background music from our selection. <br>
+                    - Choose the model for your liking and need. <br>
                 </h1>
             </div>
             
@@ -108,7 +114,7 @@
                 </h1>
                 
                 <h1 class="display-4 text-box">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    You can preview your generated songs on our website and download them to your device
                 </h1>
             </div>
             
@@ -130,7 +136,8 @@
                 </h1>
                 
                 <h1 class="display-4 text-box">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Go to our 24/7 stream on youtube to enjoy realxing tunes to study and chill to. <br>
+                    <a href="https://www.youtube.com/channel/UCOsZtY6Wl13tZB_Zie_W0Fg/featured" target="_blank">link to the stream</a>
                 </h1>
             </div>
             
@@ -150,7 +157,7 @@
 		  </div>
 		</div>
 
-		<div style="position: relative;">
+		<div style="position: relative;" id="contact">
 		  <div style="color: #ddd; background-color: #282E34; text-align: center; padding:50px 80px; text-align: justify;">
 			<table style="width: 100%; text-align: center;">
 				<form action="/action_page.php"> <!-- change the action to python -->
