--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </nav>
-        
+
 		<div class="bgimg-1">
 		  <div class="header" id="nav">
 			  <a href="#index" class="logo" style="font-family: 'Kaushan Script', cursive;">
@@ -160,7 +160,7 @@
 		<div style="position: relative;" id="contact">
 		  <div style="color: #ddd; background-color: #282E34; text-align: center; padding:50px 80px; text-align: justify;">
 			<table style="width: 100%; text-align: center;">
-				<form action="/action_page.php"> <!-- change the action to python -->
+				<form action="#action"> <!-- change the action to python -->
 				  <tr>
 					<th style="font-size: 2em; padding-bottom: 10px; text-align: center; border-right: 1px solid white;">AlphaMusic Team:</th>
 					<th style="font-size: 2em; padding-bottom: 10px; text-align: center; width: 50%;">Email Us:</th> 
