--- a/model/static/generate/index_style.css
+++ b/model/static/generate/index_style.css
@@ -8,7 +8,7 @@ body, html {
   scroll-behavior: smooth;
 }
 
-.bgimg-1, .bgimg-2, .bgimg-3, .soundcloud {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .soundcloud {
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
@@ -30,6 +30,11 @@ body, html {
 
 .bgimg-3 {
   background-image: url("https://images.unsplash.com/photo-1602973240044-ac77578f6dc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+  min-height: 40%;
+}
+
+.bgimg-4 {
+  background-image: url("https://images.unsplash.com/photo-1618901882475-4a8ce888ffda?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2064&q=80");
   min-height: 40%;
 }
 
@@ -64,7 +69,7 @@ h3 {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-  .bgimg-1, .bgimg-2, .bgimg-3, .soundcloud {
+  .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .soundcloud {
     background-attachment: scroll;
   }
 }
@@ -540,6 +545,11 @@ input[type=submit] {
 #files {
   min-height: 60vh; 
   background-image: url(https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+}
+
+#sound {
+  min-height: 60vh; 
+  background-image: url(https://images.unsplash.com/photo-1618901882475-4a8ce888ffda?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2064&q=80);
 }
 
 #meetings {
