--- a/model/templates/generate/generate_page.html
+++ b/model/templates/generate/generate_page.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,19 +11,22 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-        
+
         {% load static %}
         <link href="{% static 'generate/index_style.css' %}" rel="stylesheet">
-        
+        <link href="{% static 'generate/loading_style.css' %}" rel="stylesheet">
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js"></script>
-        
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
         {% load static %}
         <script src="{% static 'generate/index_js.js' %}"></script>
+        <script src="{% static 'generate/loading_js.js' %}"></script>
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 	</head>
 	<body>
         <nav role="navigation">
@@ -41,15 +44,15 @@
             </ul>
           </div>
         </nav>
-        
+
 		<div class="bgimg-1">
 		  <div class="header" id="nav">
 			  <a href="#index" class="logo" style="font-family: 'Kaushan Script', cursive;">
                   <span style="font-weight: normal; font-family: 'Kaushan Script', cursive;">Alpha</span> Music
               </a>
 			  <div class="header-right">
-				<a class="active" href="#home">Home</a>
-				<a href="#contact">Contact</a>
+				<a class="active" href="/#home">Home</a>
+				<a href="/#contact">Contact</a>
 				<a href="/generate">Generate Songs</a>
                 <a href="https://www.youtube.com/channel/UCOsZtY6Wl13tZB_Zie_W0Fg/featured" target="_blank">Live Stream</a>
                 <a href="https://soundcloud.com/alpha-music-416482025" target="_blank">Sound Cloud</a>
@@ -84,9 +87,19 @@
                         </table>
                         <br><br>
 
-                        <input type="submit" class="button" name="submit" value="Create" style="background-color: black;" />
+                        <input type="submit" class="button" name="submit" value="Create" style="background-color: black;" onclick="on()" />
                     </form>
                 </h1>
+            </div>
+          </div>
+        </div>
+
+        <div id="overlay">
+          <div class="loading-page">
+            <div class="counter">
+              <p> loading </p>
+              <h1> 0% </h1>
+              <hr/>
             </div>
           </div>
         </div>
@@ -104,6 +117,15 @@
                   <h1 class="display-10 text-box">
                     <table style="margin-left: 3%; width: 95%;">
                       <tr>
+                        {% for song in songs_created %}
+                          <td>
+                            <h3 style="color: black;">{{ song.1 }}</h3>
+                            <audio controls>
+                              <source src="/static/{{song.0}}" type="audio/wav">
+                            </audio>
+                          </td>
+                        {% endfor %}
+
                         <td>
                           <h3 style="color: black;">Hunting Grounds</h3>
                           <audio controls>
@@ -150,10 +172,13 @@
           <div class="row">
             <div class="col textBox">
                 <h1 class="display-4 text-box">
-                    <iframe width="1140" height="720" src="https://www.youtube.com/embed/KmMO_1iZ7wY" title="Roi Flint Live Stream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/KmMO_1iZ7wY" title="Roi Flint Live Stream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/NQMxa6TQJyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/p_A1uwsogEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/x8DE6KfKV4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </h1>
             </div>
-            
+
             <div class="col bgimg-2" id="files">
                   <div class="caption">
                     <span class="display-2 border" id = "wallpaperCaption" style="color: white;">
@@ -165,10 +190,10 @@
         </div>
 
         <div class="soundcloud">
-		  <div class="caption">
-			<span class="display-4" id="wallpaperCaption" style="color: white; letter-spacing: 10px; padding: 5%;">Sound Cloud</span>
-		  </div>
-		</div>
+          <div class="caption">
+          <span class="display-4" id="wallpaperCaption" style="color: white; letter-spacing: 10px; padding: 5%;">Sound Cloud</span>
+          </div>
+        </div>
         
         <div class="container-auto">
           <div class="row">
@@ -176,12 +201,12 @@
                 
                 <h1 class="display-4 text-box">
                     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1300760323&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kylexian" title="Kyle Xian" target="_blank" style="color: #cccccc; text-decoration: none;">Kyle Xian</a> · <a href="https://soundcloud.com/kylexian/dance-in-the-game-classroom-of-the-elite-s2-opening-theme-piano-cover" title="Dance In The Game - ようこそ実力至上主義の教室へ Classroom of the Elite S2 - Opening Theme - Piano Cover" target="_blank" style="color: #cccccc; text-decoration: none;">Dance In The Game - ようこそ実力至上主義の教室へ Classroom of the Elite S2 - Opening Theme - Piano Cover</a></div>
-                    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/the-bugle" title="The Bugle" target="_blank" style="color: #cccccc; text-decoration: none;">The Bugle</a> · <a href="https://soundcloud.com/the-bugle/bugle-179-playas-gon-play" title="Bugle 179 - Playas gon play" target="_blank" style="color: #cccccc; text-decoration: none;">Bugle 179 - Playas gon play</a></div>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1489588561&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/alpha-music-416482025" title="Alpha Music" target="_blank" style="color: #cccccc; text-decoration: none;">Alpha Music</a> · <a href="https://soundcloud.com/alpha-music-416482025/sets/anime-created" title="Anime Created" target="_blank" style="color: #cccccc; text-decoration: none;">Anime Created</a></div>
                     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/the-bugle" title="The Bugle" target="_blank" style="color: #cccccc; text-decoration: none;">The Bugle</a> · <a href="https://soundcloud.com/the-bugle/bugle-179-playas-gon-play" title="Bugle 179 - Playas gon play" target="_blank" style="color: #cccccc; text-decoration: none;">Bugle 179 - Playas gon play</a></div>
                 </h1>
             </div>
             
-            <div class="col bgimg-2" id="files">
+            <div class="col bgimg-4" id="sound">
                   <div class="caption">
                     <span class="display-2 border" id = "wallpaperCaption" style="color: white;">
                         Sound Cloud
