--- a/model/templates/generate/generate_page.html
+++ b/model/templates/generate/generate_page.html
@@ -121,7 +121,7 @@
                           <td>
                             <h3 style="color: black;">{{ song.1 }}</h3>
                             <audio controls>
-                              <source src="/static/{{song.0}}" type="audio/wav">
+                              <source src="/static{{song.0}}.mp3" type="audio/mpeg">
                             </audio>
                           </td>
                         {% endfor %}
@@ -130,28 +130,28 @@
                           <h3 style="color: black;">Hunting Grounds</h3>
                           <audio controls>
                             {% load static %}
-                            <source src="{% static 'files/maestro/piano/rain/Hunting.mp3' %}" type="audio/mpeg">
+                            <source src="{% static 'files/maestro_2018/piano/rain/Hunting.mp3' %}" type="audio/mpeg">
                           </audio>
                         </td>
                         <td>
                           <h3 style="color: black;">Hunting Grounds</h3>
                           <audio controls>
                             {% load static %}
-                            <source src="{% static 'files/maestro/piano/rain/Hunting.mp3' %}" type="audio/mpeg">
+                            <source src="{% static 'files/maestro_2018/piano/rain/Hunting.mp3' %}" type="audio/mpeg">
                           </audio>
                         </td>
                         <td>
                           <h3 style="color: black;">Hunting Grounds</h3>
                           <audio controls>
                             {% load static %}
-                            <source src="{% static 'files/maestro/piano/rain/Hunting2.mp3' %}" type="audio/mpeg">
+                            <source src="{% static 'files/maestro_2018/piano/rain/Hunting2.mp3' %}" type="audio/mpeg">
                           </audio>
                         </td>
                         <td>
                           <h3 style="color: black;">Hunting Grounds</h3>
                           <audio controls>
                             {% load static %}
-                            <source src="{% static 'files/maestro/piano/rain/Hunting2.mp3' %}" type="audio/mpeg">
+                            <source src="{% static 'files/maestro_2018/piano/rain/Hunting2.mp3' %}" type="audio/mpeg">
                           </audio>
                         </td>
                       </tr>
